@@ -10,7 +10,7 @@
 .sp
 .fi
 ..
-.TH "DVIPDFMX" "1" "15 March 2021"
+.TH "DVIPDFMX" "1" "1 June 2021"
 .SH NAME
 dvipdfmx, xdvipdfmx, dvipdfm \- produce PDF files directly from DVI files
 .SH SYNOPSIS
@@ -354,12 +354,14 @@ dvipdft(1), extractbb(1),
 tex(1), luatex(1), xetex(1), dvips(1),
 .br
 groff(1), grodvi(1), pic(1),
-the Kpathsea library Info documentation (http://tug.org/kpathsea),
-and the Dvipdfmx User's Manual (in the distribution).
+the Kpathsea library Info documentation (https://tug.org/kpathsea),
+and the Dvipdfmx User's Manual (in the distribution, and linked from
+https://tug.org/dvipdfmx).
 .SH AUTHOR
 Primarily Mark A. Wicks; dvipdfmx extensions primarily by Jin-Hwan Cho,
-Shunsaku Hirata, and Matthias Franz.  For the version in TeX Live, all
-bugs and other reports should go to the
-.B dvipdfmx
-maintainers at tex-k (at) tug.org.  This man page edited for TeX Live
-by Bob Tennent and others.  This man page is public domain.
+Shunsaku Hirata, and Matthias Franz. For the version in TeX Live, please
+send bugs and other reports to the maintainers at dvipdfmx (at) tug.org
+(https://lists.tug.org/dvipdfmx).
+.PP
+This man page edited for TeX Live by Bob Tennent and others. This man
+page is public domain.
